Grant access page alignment issue

--- a/nextmagentacloud21/core/css/login/grant.css
+++ b/nextmagentacloud21/core/css/login/grant.css
@@ -39,7 +39,11 @@
 .login-footer{display: none;}
 .login-main {
   display: block !important;
-  margin-top: 10rem !important;
+  /* margin-top: 10rem !important; */
+}
+
+#body-login{
+  justify-content: unset !important;
 }
 
 
